--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Run Java code
         run: |
           cd code-review-sdk/src/main/java
-          javac plus/gaga/middleware/sdk/Main.java
+          javac t/coding/fun/Main.java
           java t.coding.fun.Main
