ci: 更新代码审查 SDK
- 更新主类

--- a/code-review-sdk/pom.xml
+++ b/code-review-sdk/pom.xml
@@ -114,7 +114,7 @@
                     <archive>
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <mainClass>plus.gaga.middleware.sdk.OpenAiCodeReview</mainClass>
+                            <mainClass>t.coding.fun.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
