ci: 添加邮件服务配置
- 在 GitHub Actions 工作流中添加了邮件服务配置
- 新增了 EMAIL_HOST、EMAIL_PORT、EMAIL_USERNAME、EMAIL_PASSWORD 和 EMAIL_TOADDRESS 环境变量

--- a/.github/workflows/code-review-maven.yml
+++ b/.github/workflows/code-review-maven.yml
@@ -66,3 +66,8 @@ jobs:
           # OpenAi - ChatGLM 配置「https://open.bigmodel.cn/api/paas/v4/chat/completions」、「https://open.bigmodel.cn/usercenter/apikeys」
           CHATGLM_APIHOST: ${{ secrets.CHATGLM_APIHOST }}
           CHATGLM_APIKEYSECRET: ${{ secrets.CHATGLM_APIKEYSECRET }}
+          EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+          EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
+          EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          EMAIL_TOADDRESS: ${{ secrets.EMAIL_TOADDRESS }}
