--- a/code-review-sdk/pom.xml
+++ b/code-review-sdk/pom.xml
@@ -150,6 +150,7 @@
                             <include>com.fasterxml.jackson.core:jackson-databind:</include>
                             <include>com.fasterxml.jackson.core:jackson-annotations:</include>
                             <include>org.eclipse.jgit:org.eclipse.jgit:</include>
+                            <include>com.sun.mail:javax.mail:</include>
                         </includes>
                     </artifactSet>
                 </configuration>
