--- a/code-review-sdk/pom.xml
+++ b/code-review-sdk/pom.xml
@@ -91,6 +91,12 @@
             <version>1.6.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -151,6 +157,7 @@
                             <include>com.fasterxml.jackson.core:jackson-annotations:</include>
                             <include>org.eclipse.jgit:org.eclipse.jgit:</include>
                             <include>com.sun.mail:javax.mail:</include>
+                            <include>jakarta.activation:jakarta.activation-api:</include>
                         </includes>
                     </artifactSet>
                 </configuration>
