refactor(code-review-sdk): 重构代码并优化邮箱发送功能
- 将 BaseCodeReviewHandler 中的 pushResultUrl 方法返回类型从 String 改为 void
- 在 GLMCodeReviewHandler 中实现 pushResultUrl 方法，发送邮件后不再返回空字符串
- 添加日志记录，确认邮件发送成功
- 更新项目依赖：
  - 移除 javax.activation-api 1.2.0
  - 添加 activation 1.1.1
- 修改相关配置文件以适应新的依赖

--- a/code-review-sdk/pom.xml
+++ b/code-review-sdk/pom.xml
@@ -91,11 +91,10 @@
             <version>1.6.2</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/javax.activation/javax.activation-api -->
         <dependency>
             <groupId>javax.activation</groupId>
-            <artifactId>javax.activation-api</artifactId>
-            <version>1.2.0</version>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
         </dependency>
 
 
@@ -159,7 +158,7 @@
                             <include>com.fasterxml.jackson.core:jackson-annotations:</include>
                             <include>org.eclipse.jgit:org.eclipse.jgit:</include>
                             <include>com.sun.mail:javax.mail:</include>
-                            <include>javax.activation:javax.activation-api:</include>
+                            <include>javax.activation:activation:</include>
                         </includes>
                     </artifactSet>
                 </configuration>
